# vest

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  examples.py  pyproject.toml  setup.py
.github/workflows/: git-bob.yml
examples/butterflies/: butterflies1.kf.csv  butterflies2.kf.csv  butterflies4.kf.csv  data.csv  download.ipynb  environment.yml  readme.md  vision_embeddings_umap.ipynb
examples/chammi-75/: download1000.ipynb  environment.yml  readme.md  vision_embeddings_umap.ipynb
examples/covid19-xray/: data.csv  data_merged.csv  download.ipynb  merge_data.ipynb  readme.md  vision_embeddings_umap.ipynb
examples/logos/: company_names.txt  data.csv  generate_company_names.py  generate_logos.py  readme.md  vision_embeddings_umap.ipynb
examples/mnist/: mnist.kf.csv  readme.md  vision_embeddings_umap.ipynb
examples/pdfs/: pdf_embeddings_umap.ipynb
examples/pdfs2/: pdf_embeddings_umap.ipynb
examples/satellite_images/: data.csv  download_naip.ipynb  image_generator.py  readme.md  region_names.txt  sat_images.kf.csv  vision_embeddings_umap.ipynb
examples/wind-turbine-data/: data.csv  readme.md  vision_embeddings_umap.ipynb  wind-turbines.kf.csv
tests/: test_data_loader.py
vest/: __init__.py  app.py  cli.py  data_loader.py
vest/static/: viewer.js
vest/templates/: viewer.html
world_of_embeddings/: __init__.py  app.py  cli.py
world_of_embeddings/static/: viewer.js
world_of_embeddings/templates/: viewer.html
