[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-embedding-space-travelling"
version = "0.2.0"
description = "Browser-based exploration of vision embeddings in 3D space."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Robert Haase", email = "robert.haase@uni-leipzig.de"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "Flask>=2.0.0",
    "pandas>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.urls]
Homepage = "https://github.com/scads/vest"

[project.scripts]
vest = "vest.cli:main"

[tool.setuptools]
packages = ["vest"]

[tool.setuptools.package-data]
vest = ["templates/*", "static/*", "data/*"]
